--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_CONTAINER_REGISTRY: "webage"
+  AZURE_CONTAINER_REGISTRY: "jschwiegerahtLab"
   CONTAINER_NAME: "weather-app/weather-app"
   RESOURCE_GROUP: "labResourceGroup"
   CLUSTER_NAME: "myAKSCluster"
